--- a/css/style3.css
+++ b/css/style3.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     color: #2d3c49;
     font-weight: 200;
 }
@@ -21,6 +21,11 @@ hr {
     font-weight: 200;
 }
 
+.text-black {
+    color: #000000;
+    font-weight: 800;
+}
+
 .text-thin {
     font-weight: 100;
 }
@@ -30,7 +35,7 @@ hr {
 }
 
 .title-href {
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 300;
 }
 
